k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  namespace: go-web-app
  labels:
    app: go-web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-web-app

  template:
    metadata:
      labels:
        app: go-web-app

    spec:
      containers:
        - name: go-web-app
          image: vamsi1409/go-web-app:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
