k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
  namespace: go-web-app
spec:
  type: ClusterIP
  selector:
    app: go-web-app
  ports:
  - port: 8080
    targetPort: 8080
