k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: go-web-app
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - name: postgres-port
    targetPort: 5432
    port: 5432
